# Mistake-Tracker

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Mistake_Tracker.py  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
src/mistake_tracker/: __init__.py  __main__.py  cli.py  data.py
tests/: test_tracker.py
